--- a/account/templates/base_generic.html
+++ b/account/templates/base_generic.html
@@ -25,7 +25,7 @@
                 <li><a href="{% url 'team:index' %}">All teams</a></li>
                 <li><a href="">All developers</a></li>
                 {% if user.is_authenticated %}
-                     <li>User: {{ user.get_username }}</li>
+                <li><a href="{% url 'account:account-detail' pk=user.get_username %}">Profile</a></li>
                      <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
                 {% else %}
                      <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
