home page added

--- a/team/templates/team/base_generic.html
+++ b/team/templates/team/base_generic.html
@@ -21,9 +21,8 @@
         <div class="col-sm-2">
             {% block sidebar %}
             <ul class="sidebar-nav">
-                <li><a href="">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="{% url 'team:index' %}">All teams</a></li>
-                <li><a href="">All developers</a></li>
                 {% if user.is_authenticated %}
                      <li>User: {{ user.get_username }}</li>
                      <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
