--- a/team/templates/team/index.html
+++ b/team/templates/team/index.html
@@ -5,7 +5,7 @@
 {% if latest_team_list %}
     <ul>
         {% for team in latest_team_list %}
-            <li>{{team.name}}</li>
+            <li><a href="{% url 'team:team-detail' team.name %}">{{team.name}}</a></li>
             <p>{{team.create_time}}</p>
             <hr>
         {% endfor %}
