--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -4,6 +4,7 @@
     <img src="{{ profile.photo.url }}" id="img">
 {% endif %}
 <h1>{{profile.username}}</h1>
+<a href="{% url 'account:edit-profile'  pk=user.get_username%}">edit profile</a>
 <h2>Skills</h2>
 <h3>
     {% for skill in skills %}
@@ -22,6 +23,25 @@
             <p>Description : {{project.description}}</p>
             <p>{{project.start_time}}</p>
             <p>{{project.end_time}}</p>
+            <hr>
+        </ul>
+    {% endfor %}
+</h3>
+<h2>Teams</h2>
+<h3>
+    {% for team in teams %}
+        <ul>
+            <li><a href="{% url 'team:team-detail' pk=team.name %}">{{team.name}}</a></li>
+            <hr>
+        </ul>
+    {% endfor %}
+</h3>
+</h3>
+<h2>Members of</h2>
+<h3>
+    {% for member in members %}
+        <ul>
+            <li><a href="{% url 'team:team-detail' pk=member.name %}">{{member.name}}</a></li>
             <hr>
         </ul>
     {% endfor %}
