--- a/account/templates/base_generic.html
+++ b/account/templates/base_generic.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    {% load static %}
     {% block title %}<title>Teamus</title>{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="shortcut icon" href="{% static 'icon/favicon.svg' %}" type="image/x-icon">
 
     <!-- Add additional CSS in static file -->
-    {% load static %}
     <link rel="stylesheet" href="{% static 'css/account_styles.css' %}">
+    {% block style %}{% endblock %}
+
 </head>
 
 <body>
-
-<div class="container-fluid">
+</div>
+    <div class="container-fluid">
     <div class="row">
         <div class="col-sm-2">
             {% block sidebar %}
@@ -28,13 +30,19 @@
                 <li><a href="{% url 'account:create-team' pk=user.get_username%}">Create team</a></li>
                 <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
                 {% else %}
-                     <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-               {% endif %}
+                <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+                {% endif %}
             </ul>
             {% endblock %}
         </div>
+
         <div class="col-sm-10 ">
-            {% block content %}{% endblock %}
+            <div>
+                <div class="header">
+                <div class="home_icon_container"><img src="{% static 'icon/home_icon.svg' %}" alt="home"></div>
+                <div class="logo"><img src="{% static 'icon/logo.svg' %}" alt="teamUs logo"></div>
+            </div>
+            <div>{% block content %}{% endblock %}</div>
         </div>
     </div>
 
