--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -21,8 +21,8 @@
                                     <input type="hidden" name="next" value="{{ next }}" />
                                 </div>
                                 <div class="side_by_side_text">
-                                    <div class="italic_light_blue_14">dont have account?</div>
-                                    <div class="italic_blue_14">sign up</div>
+                                    <div class="italic_light_blue_14">dont have account?</a></div>
+                                    <div class="italic_blue_14"><a href="{% url 'register' %}">sign up</div>
                                 </div>
                                 <div class="italic_light_blue_14 center_of_beige_container">
                                     <a href="{% url 'password_reset' %}">Lost password?</a>
