--- a/teamus/templates/register.html
+++ b/teamus/templates/register.html
@@ -11,13 +11,8 @@
                         <div class="bold_italic_dark_blue_16">You have not yet signed up to TeamUs</div>
                         <div class="italic_light_blue_14">Please complete the information below to register</div>
                         <div class="form_container">
-                            <form action="">
-                                <div class="italic_black_14">first name</div>
-                                <input type="text" name="first name" id="first_name" placeholder="enter your first name">
-
-                                <div class="italic_black_14">last name</div>
-                                <input type="text" name="last name" id="last_name" placeholder="enter your last name">
-
+                            <form action="{% url 'register' %}" method="post" >
+                                {% csrf_token %}
                                 <div class="italic_black_14">username</div>
                                 <input type="text" name="username" id="username" placeholder="enter your username">
 
@@ -25,12 +20,20 @@
                                 <input type="email" name="email" id="email" placeholder="enter your email">
 
                                 <div class="italic_black_14">password</div>
-                                <input type="password" name="password" id="pass" placeholder="enter your password">
+                                <input type="password" name="password1" id="pass" placeholder="enter your password">
 
                                 <div class="italic_black_14">confirm password</div>
-                                <input type="password" name="confirm password" id="confirm_password" placeholder="enter your password again">
-
-                                <div class="sign_up_button">Sign up</div>
+                                <input type="password" name="password2" id="confirm_password" placeholder="enter your password again">
+                                <div class="sign_up_button">
+                                    <input type="submit" value="Sign up" />
+                                </div>
+                                <div>
+                                    {% if messages %}
+                                        {% for message in messages %}
+                                            {{ message }}
+                                        {% endfor %}
+                                    {% endif %}
+                                </div>
                             </form>
                         </div>
                     </div>
