--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -3,68 +3,67 @@
 {% block title %}<title>Profile</title>{% endblock %}
 {% block style %}<link rel="stylesheet" href="{% static 'css/userProfile.css' %}">{% endblock %}
 {% block content %}
-<div class="white_container">
-    <div>
+<div class="row">
+    <div class="col-sm-3">
         {% if profile.photo%}
-            <img src="{{ profile.photo.url }}" id="img">
+        <img src="{{ profile.photo.url }}" id="img">
         {% endif %}
+    </div>
+    <div class="col-sm-10">
+        <h1>{{profile.username}}</h1>
+        <a href="{% url 'account:edit-profile'  pk=user.get_username%}">edit profile</a>
+    </div>
+    <div class="col-sm-10">
+        <h2>Skills</h2>
         <div>
-            <h1>{{profile.username}}</h1>
-        </div>
-        <div>
-            <a href="{% url 'account:edit-profile'  pk=user.get_username%}">edit profile</a>
-        </div>
-        <div>
-            <h2>Skills</h2>
-            <div>
-                <h3>
-                    {% for skill in skills %}
-                    <ul>
-                        <li>{{skill.name}}</li>
-                            <p>{{skill.get_score_display}}</p>
-                            <hr>
-                    </ul>
-                    {% endfor %}
-                </h3>
-            </div>
-        </div>
-        <div>
-            <h2>Projects</h2>
-                <h3>
-                    {% for project in projects %}
-                        <ul>
-                            <li>{{project.name}}</li>
-                                <p>Description : {{project.description}}</p>
-                                <p>{{project.start_time}}</p>
-                                <p>{{project.end_time}}</p>
-                                <hr>
-                            </ul>
-                    {% endfor %}
-                </h3>
-        </div>
-        <div>
-            <h2>Teams</h2>
-                <h3>
-                    {% for team in teams %}
-                        <ul>
-                            <li><a href="{% url 'team:team-detail' pk=team.name %}">{{team.name}}</a></li>
-                            <hr>
-                        </ul>
-                    {% endfor %}
-                </h3>
-        </div>
-        <div>
-            <h2>Members of</h2>
-                <h3>
-                    {% for member in members %}
-                        <ul>
-                            <li><a href="{% url 'team:team-detail' pk=member.name %}">{{member.name}}</a></li>
-                            <hr>
-                        </ul>
-                    {% endfor %}
-                </h3>
+            <h3>
+                {% for skill in skills %}
+                <ul>
+                    <li>{{skill.name}}</li>
+                    <p>{{skill.get_score_display}}</p>
+                    <hr>
+                </ul>
+                {% endfor %}
+            </h3>
         </div>
     </div>
+    <div class="col-sm-10">
+        <h2>Projects</h2>
+        <h3>
+            {% for project in projects %}
+            <ul>
+                <li>{{project.name}}</li>
+                <p>Description : {{project.description}}</p>
+                <p>{{project.start_time}}</p>
+                <p>{{project.end_time}}</p>
+                <hr>
+            </ul>
+            {% endfor %}
+        </h3>
+    </div>
+    <div class="col-sm-10">
+        <h2>Teams</h2>
+        <h3>
+            {% for team in teams %}
+            <ul>
+                <li><a href="{% url 'team:team-detail' pk=team.name %}">{{team.name}}</a></li>
+                <hr>
+            </ul>
+            {% endfor %}
+        </h3>
+    </div>
+    <div class="col-sm-10">
+        <h2>Members of</h2>
+        <h3>
+            {% for member in members %}
+            <ul>
+                <li><a href="{% url 'team:team-detail' pk=member.name %}">{{member.name}}</a></li>
+                <hr>
+            </ul>
+            {% endfor %}
+        </h3>
+    </div>
+
 </div>
 {% endblock %}
 
