--- a/account/templates/base_generic.html
+++ b/account/templates/base_generic.html
@@ -17,35 +17,35 @@
 </head>
 
 <body>
-</div>
-    <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2">
-            {% block sidebar %}
-            <ul class="sidebar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="{% url 'team:index' %}">All teams</a></li>
-                {% if user.is_authenticated %}
-                <li><a href="{% url 'account:account-detail' pk=user.get_username %}">Profile</a></li>
-                <li><a href="{% url 'account:create-team' pk=user.get_username%}">Create team</a></li>
-                <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
-                {% else %}
-                <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-                {% endif %}
-            </ul>
-            {% endblock %}
-        </div>
-
-        <div class="col-sm-10 ">
-            <div>
-                <div class="header">
-                <div class="home_icon_container"><img src="{% static 'icon/home_icon.svg' %}" alt="home"></div>
-                <div class="logo"><img src="{% static 'icon/logo.svg' %}" alt="teamUs logo"></div>
+<div class="container-fluid">
+    <div class="header">
+        <div class="home_icon_container"><img src="{% static 'icon/home_icon.svg' %}" alt="home"></div>
+        <div class="logo"><img src="{% static 'icon/logo.svg' %}" alt="teamUs logo"></div>
+    </div>
+    <div class="main">
+        <div class="white_container ">
+            <div class="col-sm-3">
+                {% block sidebar %}
+                <ul class="sidebar-nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="{% url 'team:index' %}">All teams</a></li>
+                    {% if user.is_authenticated %}
+                    <li><a href="{% url 'account:account-detail' pk=user.get_username %}">Profile</a></li>
+                    <li><a href="{% url 'account:create-team' pk=user.get_username%}">Create team</a></li>
+                    <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+                    {% else %}
+                    <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+                    {% endif %}
+                </ul>
+                {% endblock %}
             </div>
-            <div>{% block content %}{% endblock %}</div>
+            <div class="beige_container">
+                <div class="aligner">
+                    {% block content %}{% endblock %}
+                </div>
+            </div>
         </div>
     </div>
-
 </div>
 </body>
 </html>
